# ai-libraries

./: .gitignore  README.md  chess_aux.py  chessmarro_model.py  get_best_fuctions.py  output.prof  test.py  test_c.py
c/chessintionlib/: chess_aux_c.py  chessintionlib.cpp  docs.md  meson.build
